--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "cocoapp",
   "version": "1.0.0",
   "description": "Web app which helps user to make the best hot chocolate",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Malgorzata Bozykowska",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "static": "^2.0.0"
   }
